Mon, 04 Nov 2002 14:00:58 -0800  Evan Martin  <martine@cs.washington.edu>
	
	* gtkspell.spec.in: RPM .spec file template.
	  From Alex <hansolo@rochester.rr.com>.
	* configure.ac: Generate gtkspell.spec from gtkspell.spec.in.
	* README: Add Ari and Alex to a "Thanks" section.

Mon, 04 Nov 2002 09:56:44 -0800  Evan Martin  <martine@cs.washington.edu>

	* configure.ac: Check for libpspell earlier and die if we don't
	  find it.  Prerequire autoconf 2.52.  
	* gtkspell/Makefile.am, examples/Makefile.am: Set CFLAGS instead
	  of foo_CFLAGS (why does the old way not work anymore?).
	* autogen.sh: Don't automatically run configure.

Tue Aug 13 13:14:16 PDT 2002  Evan Martin  <martine@cs.washington.edu>

	* 2.0.2 released (minor bugfix).

Thu Aug 08 11:38:07 PST 2002  Evan Martin  <martine@cs.washington.edu>

	* 2.0.1 released.

Fri Mar 29 17:05:52 PST 2002  Evan Martin  <martine@cs.washington.edu>

	* Initial release.
